--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "article-preview-component-master",
+  "name": "four-card-feature-section-master",
   "version": "1.0.0",
-  "description": "![Design preview for the Article preview component coding challenge](./design/desktop-preview.jpg)",
+  "description": "![Design preview for the Four card feature section coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "node-sass sass/main.scss css/styles.css -w" 
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "node": "^16.6.1",
-    "node-sass": "^6.0.1"
-  },
   "dependencies": {
-    "jqeury": "0.0.1-security"
+    "jquery": "^3.6.0"
+  },
+  "devDependencies": {
+    "node-sass": "^6.0.1"
   }
 }
