--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "four-card-feature-section-master",
+  "name": "base-apparel-coming-soon-master",
   "version": "1.0.0",
-  "description": "![Design preview for the Four card feature section coding challenge](./design/desktop-preview.jpg)",
+  "description": "![Design preview for the Base Apparel coming soon page coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/styles.css -w" 
+    "compile:sass": "node-sass sass/main.scss css/style.css -w"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "jquery": "^3.6.0"
   },
   "devDependencies": {
+    "node": "^16.9.1",
     "node-sass": "^6.0.1"
   }
 }
